@@ -5,9 +5,7 @@
 \name{universalmotif-class}
 \alias{universalmotif-class}
 \alias{universalmotif}
-\alias{[,universalmotif,ANY,ANY,ANY-method}
 \alias{[,universalmotif-method}
-\alias{[<-,universalmotif,ANY,ANY,ANY-method}
 \alias{[<-,universalmotif-method}
 \alias{initialize,universalmotif-method}
 \alias{show,universalmotif-method}
@@ -25,9 +23,9 @@
 \alias{cbind,universalmotif-method}
 \title{universalmotif: Motif class.}
 \usage{
-\S4method{[}{universalmotif,ANY,ANY,ANY}(x, i)
+\S4method{[}{universalmotif}(x, i)
 
-\S4method{[}{universalmotif,ANY,ANY,ANY}(x, i) <- value
+\S4method{[}{universalmotif}(x, i) <- value
 
 \S4method{initialize}{universalmotif}(.Object, name, altname, family,
   organism, motif, alphabet = "DNA", type, icscore, nsites,
